--- a/notes.org
+++ b/notes.org
@@ -6,7 +6,14 @@
 
 head-> size left on tiny/small/large pages
 
+new alloc:
+-> mmap()
+--- ptr = 0xdead
+-malloc()
+--- ptr = 0xdebf
 
+
+realloc->copy structs
 
 * malloc()
 3 page sizes
